--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,15 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Trispace:wght@400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-    font-family: 'Sen', sans-serif;
-
-    @apply tracking-tight text-gray-700;
+	font-family: "Sen", sans-serif;
+	@apply tracking-tight text-gray-700;
 }
